src/test/deca/context/invalid/methodCall2.deca
class A {

    void aprint(float x, int n) {
        int i = 0;
        while (i<n) {
            i=i+1;
            println(x);
        }
    }
}

{
    A a = new A();
    a.aprint();
}
//ERROR :14: